src/test/ui/parser/attr-bad-meta-3.stderr
error: expected `]`, found `token`
  --> $DIR/attr-bad-meta-3.rs:11:10
   |
LL | #[path() token] //~ ERROR expected `]`, found `token`
   |          ^^^^^ expected `]`

error: aborting due to previous error

